welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
else{ if (a>9 && a<21 && ){return a}else{if(b>9 && b<21 && b>a){return b}}}
                      ^max1020:4: error: type mismatch;
 found   : Unit
 required: Int
else{ if (a>9 && a<21 && ){return a}else{if(b>9 && b<21 && b>a){return b}}}
                                         ^